<package>
  <name>saw_intuitive_da_vinci_examples</name>
  <version>1.2.0</version>
  <description>
  sawIntuitiveDaVinci Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawIntuitiveResearchKit</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_intuitive_da_vinci</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_intuitive_da_vinci</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
