<?xml version="1.0"?>
<package format="3">
  <name>intuitive_da_vinci</name>
  <version>2.0.0</version>
  <description>The Intuitive da Vinci ROS package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">saw_intuitive_da_vinci</build_depend>
  <build_depend condition="$ROS_VERSION == 1">cisst_ros_crtk</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roslib</build_depend>
  <build_depend condition="$ROS_VERSION == 1">crtk_python_client</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">saw_intuitive_da_vinci</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">cisst_ros_crtk</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roslib</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">crtk_python_client</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">cisst_ros_crtk</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
